# rust-bin-template

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: cli.rs  error.rs  main.rs
