[package]
name = "foobar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
clap = { version = "4.0.29", features = ["derive"] }
pretty_env_logger = "0.4.0"
log = "0.4.17"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
ethers = "1.0.0" # TODO: remove
